test/bad/double_declaration_03.mpp
data foo = #FOO;
var foo:int;
